# Pneumonia

./: .dockerignore  .env.template  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  cliff.toml  docker-compose.yml  netlify.toml  package.json  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.changeset/: config.json  curly-horses-attack.md  huge-rockets-eat.md  solid-webs-brush.md  sweet-pans-repair.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general.yml
.github/scripts/: generate_release_meta.py
.github/workflows/: SECRETS.md  client.yml  commitlinter.yml  deploy-prod.yml  (+7 more)
IA/: Dockerfile  README.md  package.json  pneumonia-v2.ipynb  pneumonia_cnn.ipynb  pneumonia_cnn.py  pneuùonia_cnn.ipynb  pyproject.toml  requirements.txt  server.py
client/: .depcheckrc  .env.template  .eslintrc-auto-import.json  .gitignore  .prettierignore  .prettierrc  .stylelintignore  CHANGELOG.md  Dockerfile  code.txt  env.d.ts  eslint.config.js  eslint.config.ts  index.html  knip-hints.ts  knip.config.ts  package.json  stylelint.config.cjs  stylelint.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.mts  vitest.config.ts
docs/: AUTHENTICATION.md
scripts/: setup_venv.py
server/: .depcheckrc  .dockerignore  .env.template  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  drizzle.config.ts  eslint.config.js  eslint.config.ts  knip.json  package.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
(+252 files in other folders)
